# scipack

./: .coveragerc  .cruft.json  .gitignore  00_img.npy  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: conda-package-build.yml
conda/: environment.yml  meta.yaml
doc/: conf.py  extra.md  index.md  index.rst  installation.md
doc/doc_image/: contents.rst  reference.rst
doc/doc_image/user/: gui.rst  io.rst
doc/doc_numpy/: contents.rst
doc/doc_numpy/user/: index.rst  numpy_creation.rst  numpy_manipulation.rst  numpy_math_functions.rst  todo.rst
doc/doc_pylab/: contents.rst
doc/doc_pylab/user/: index.rst
doc/doc_stdlib/: contents.rst
doc/doc_stdlib/user/: autosum.rst
doc/examples/: example1.ipynb  example2.ipynb
src/openalea/color/: color_interface_widget.py
src/openalea/csv/: __wralea__.py
src/openalea/data/: __wralea__.py
src/openalea/file/: __wralea__.py
src/openalea/functional/: __wralea__.py
src/openalea/image/: spatial_image.py
src/openalea/image_demo_wralea/: __wralea__.py
src/openalea/image_wralea/: __wralea__.py
src/openalea/math/: __wralea__.py
src/openalea/model/: __wralea__.py
src/openalea/numpy_demo_wralea/: __wralea__.py
src/openalea/numpy_test_wralea/: __wralea__.py
src/openalea/numpy_wralea/: __wralea__.py
src/openalea/oapylab/: __init__.py
src/openalea/path/: __wralea__.py
src/openalea/pickling/: __wralea__.py
src/openalea/plotools/: __wralea__.py
src/openalea/pylab_3d_wralea/: __wralea__.py
src/openalea/pylab_datasets_wralea/: __wralea__.py
src/openalea/pylab_decorators_wralea/: __wralea__.py
src/openalea/pylab_demo_wralea/: __wralea__.py
src/openalea/pylab_drawing_wralea/: __wralea__.py
src/openalea/pylab_main_wralea/: __wralea__.py
src/openalea/pylab_patches_wralea/: __wralea__.py  py_pylab.py
src/openalea/pylab_plotting_wralea/: __wralea__.py
src/openalea/pylab_test_wralea/: __wralea__.py
src/openalea/scipack/: __init__.py
src/openalea/string/: __wralea__.py
test/: test_scipack.py
test/test_image/: 00_data.npy  00_sp.npy  deprecated_test_graph_creation.py  test_inrimage.py  test_morpho.py  test_pixmap.py  test_point_selection.py  test_read_sequence.py  test_scalable_label.py  test_serial.py
test/test_pylab/: test_pylab_nodes.py
(+20 files in other folders)
